# things_eeg2_dataset

./: .gitignore  README.md  example.py  pyproject.toml  vhs.sh
.github/: CODEOWNERS
.github/assets/demo/: demo-dark.tape  demo-light.tape
.github/workflows/: ci.yml  publish.yml
docs/: raw_preprocessor.md
src/things_eeg2_dataset/: paths.py
src/things_eeg2_dataset/cli/: logger.py  main.py  profiling.py  show.py
src/things_eeg2_dataset/dataloader/: README.md  __init__.py  config.py  data_config.json  datamodule.py  dataset.py  sample_info.py
src/things_eeg2_dataset/processing/: __init__.py  pipeline.py
src/things_eeg2_dataset/processing/downloading/: download_utils.py  downloader.py
src/things_eeg2_dataset/processing/eeg_processing/: braindecode_preprocessing.py  epoching.py  raw_processor.py  save.py  whiten.py
src/things_eeg2_dataset/processing/embedding_processing/: __init__.py  embedding_generators.py  embedding_index_merger.py
src/things_eeg2_dataset/processing/embedding_processing/embedding_models/ip_adapter/: ip_adapter.py  ip_adapter_faceid.py  ip_adapter_faceid_separate.py
src/things_eeg2_dataset/verification/: data_validation.py  dependency_ver.py
src/things_eeg2_dataset/visualization/: report_generator.py
tests/: __init__.py  conftest.py
tests/test_preprocessing/: test_downloader.py  test_embedding_generator.py  test_embedding_index_merger.py  test_embedding_model_loading.py  test_pipeline.py  test_pipeline_directories.py  test_pipeline_dryrun.py  test_preprocessor.py
tests/tests_dataloader/: test_dataloader.py  test_default_installation.py  test_no_image_embeddings.py  test_split_strategies.py
